rsass/tests/spec/non_conformant/errors/unicode/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/unicode"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("unicode")
}

mod report;
